# ECB_computer_vision

./: 3D_coding_skeleton.ipynb  MAIN_HoughlineP_Decision_Tree.ipynb  README.md  click_image.py  color_modification.py  pyproject.toml
SCRIPTS/: pre_processing_floor_plan.py  refining_pixels_coordinates.py  room_naming_and_links.py
functions/: auto_complete_values.py  computing_pixels_matching_calculated_coordinates.py  coordinates_logical_ruling_out.py  coordinates_mathematical_finding.py  crop_plan.py  divided_nodes_by_floor_position.py  facade_nodes_detections.py  floor_nodes_detections.py  image_rotation.py  nodes_detection.py  north_building_facade_pixels_coordinates.py  north_building_floor_pixels_coordinates.py  overall_hyperparameters_floors_computer_vision.py  params.py  pixel_matching_support_functions.py  pixels_matching.py  pixels_matching_calculated_coordinates.py  resize_image.py  retrieve_pdf.py  rooms_contours.py  rooms_coordinates_equipment_coordinates_matching.py  rotate_png.py  rotate_points_with_cv2.py  south_building_facade_pixels_coordinates.py  south_building_floor_pixels_coordinates.py  transfer_grid.py  trapezes_lines_facade_plan.py  validate_step.py  visualisation_3D_maps.py
functions/ROOM_NAMING/: final_datasets_creation.py  final_df_concatination.py  grand_finale_excel_table.py  overall_hyperparameters_big_rooms_floors_computer_vision.py  pixels_closest_neighbours.py  preprocessing_architectural_data.py  preprocessing_datasets_coordinates_rooms_full_coordinates_pixels.py  preprocessing_different_methods.py  top_room_detection.py  (+1 more)
